# weasley-clock

./: .python-version  data.json  image_darkener.py  main.py  pictures.kv  pyproject.toml  run.sh
app/: main.py
